--- a/_source/less/variables.less
+++ b/_source/less/variables.less
@@ -72,7 +72,7 @@
 //
 //## Specify custom locations of the include Glyphicons icon font. Useful for those including Bootstrap via Bower.
 
-@icon-font-path:          "/assets/fonts/bootstrap/";
+@icon-font-path:          "http://pongstr.github.io/rolling-into-deep/assets/fonts/bootstrap/";
 @icon-font-name:          "glyphicons-halflings-regular";
 @icon-font-svg-id:        "glyphicons_halflingsregular";
 
