--- a/_source/less/custom/cover.less
+++ b/_source/less/custom/cover.less
@@ -13,9 +13,9 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  background-image: url("/assets/img/cover.jpg");
+  background-image: url("http://pongstr.github.io/rolling-into-deep/assets/img/cover.jpg");
   background-size: cover;
-  
+
   .cover-inner {
     display: table;
     text-align: center;
@@ -38,16 +38,16 @@ body {
     color: #0baae7;
     text-shadow: 4px 6px 0 fade(#000, 25%);
   }
-  
+
   .cover-info small {
     opacity: 0.55;
   }
-  
+
   .cover-info .lead {
     font-size: 28px;
     text-shadow: 0 2px 1px fade(#000, 55%);
   }
-  
+
   .cover-info .btn-lg span {
     font-family: adelle, @font-family-sans-serif;
     font-size: 26px;
