--- a/_source/less/font-awesome/variables.less
+++ b/_source/less/font-awesome/variables.less
@@ -1,7 +1,7 @@
 // Variables
 // --------------------------
 
-@fa-font-path:        "/assets/fonts/font-awesome";
+@fa-font-path:        "http://pongstr.github.io/rolling-into-deep//assets/fonts/font-awesome";
 //@fa-font-path:        "//netdna.bootstrapcdn.com/font-awesome/4.0.3/fonts"; // for referencing Bootstrap CDN font files directly
 @fa-css-prefix:       fa;
 @fa-version:          "4.0.3";
